✨ 新增轮询功能：支持主动查询设备状态
🔄 功能特性：
- 在配置流程中添加轮询开关和间隔设置
- 支持按协议格式定时查询设备位置 (55 + 设备地址 + 01 + 02 + 01 + CRC16)
- 可配置轮询间隔（2-60秒，默认5秒）
- 完善的生命周期管理和错误处理

📝 修改文件：
- const.py: 添加轮询相关常量
- config_flow.py: 配置界面增加轮询选项
- coordinator.py: 实现轮询任务和位置查询命令生成
- __init__.py: 传递轮询参数到协调器
- translations/zh.json: 添加中文翻译

🎯 解决问题：
- 支持主动轮询模式，适配不同的网络环境
- 轮询命令严格按照设备协议格式实现
- 与现有位置修正逻辑完美兼容

--- a/translations/zh.json
+++ b/translations/zh.json
@@ -16,6 +16,8 @@
         "data": {
           "auto_discovery": "启用自动设备发现",
           "use_device_mapping": "使用预设的设备房间名称映射",
+          "enable_polling": "启用轮询功能（主动查询设备状态）",
+          "polling_interval": "轮询间隔（秒）",
           "discovery_timeout": "发现超时时间（秒）"
         }
       },
